# luaffi_issue

./: .editorconfig  CMakeLists.txt  README.md
cmake/: FetchLuaJIT.cmake
lib/: CMakeLists.txt  somelib.c  somelib.h
src/: CMakeLists.txt  main.c  main.lua
